build views for posts and users

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,7 @@
-<p>Here is a list of all users</p>
+<div class="container mt-5">
+  <% @users.each do |user| %>
+    <a href="/users/<%= user.id %>" class="text-decoration-none">
+      <%= render 'shared/user_card', user: user %>
+    </a>
+  <% end %>
+</div>
