--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,9 @@
 <div class="container mt-5">
   <%= render 'shared/user_card', user: @author %>
 
+  <% if @posts.empty? %>
+    <p>This user has no posts yet</p>
+  <% end %>
   <% @posts.each do |post| %>
     <a href="/users/<%= post.author.id %>/posts/<%= post.id %>" class="text-decoration-none">
       <%= render 'shared/post_card', post: post %>
