--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,7 @@
 <div class="container mt-5">
+  <% if @users.empty? %>
+    <p>There are no users for now</p>
+  <% end %>
   <% @users.each do |user| %>
     <a href="/users/<%= user.id %>" class="text-decoration-none">
       <%= render 'shared/user_card', user: user %>
