handle view edge cases, posts no comments, users no posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,8 +6,10 @@
   <% end %>
   <% @posts.each do |post| %>
     <a href="/users/<%= post.author.id %>/posts/<%= post.id %>" class="text-decoration-none">
-      <%= render 'shared/post_card', post: post %>
-      <%= render 'shared/comments_card', comments: post.five_recent_comments %>
+      <div class="mb-4">
+        <%= render 'shared/post_card', post: post %>
+        <%= render 'shared/comments_card', comments: post.five_recent_comments unless post.five_recent_comments.empty? %>
+      </div>
     </a>
   <% end %>
   <nav aria-label="Pagination for posts" class="mt-5">
