--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,5 +11,5 @@
       <p class="mt-2"><%= @post.text %></p>
     </div>
   </div>
-  <%= render 'shared/comments_card', comments: @post.comments %>
+  <%= render 'shared/comments_card', comments: @post.comments unless @post.comments.empty? %>
 </div>
