--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,9 @@
   </div>
   <% @user.three_recent_posts.each do |post| %>
     <a href="/users/<%= @user.id %>/posts/<%= post.id %>" class="text-decoration-none">
-      <%= render 'shared/post_card', post: post %>
+      <div class="mb-3">
+        <%= render 'shared/post_card', post: post %>
+      </div>
     </a>
   <% end %>
   <div class="w-100 mt-5 d-flex justify-content-center align-items-center">
