add buttons for creating posts and comments

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,4 +7,5 @@
       <%= render 'shared/user_card', user: user %>
     </a>
   <% end %>
+  <%= link_to 'Add a new post', "/users/#{@current_user.id}/posts/new", class: "btn btn-primary" %>
 </div>
