--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,7 @@
   <nav aria-label="Pagination for posts" class="mt-5">
     <ul class="pagination justify-content-center">
       <% (1..@total_pages).each do |page| %>
-        <li class="page-item"><a class="page-link" href="/users/<%= @author.id %>/posts?page=<%= page %>"><%= page %></a></li>
+        <li class="page-item"><a class="page-link" href="<%= user_posts_path(user_id: @author.id) + "?page=#{page}" %>"><%= page %></a></li>
       <% end %>
     </ul>
   </nav>
